<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.kiwiapps.propertyexample2.MainActivity">

    <RelativeLayout
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/try_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="TRY"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            />
        <ImageView
            android:id="@+id/album_art"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:clickable="true"
            android:contentDescription="@string/desc_album_art"
            android:scaleType="centerCrop"
            android:src="@drawable/mean_something_kinder_than_wolves"
            />

        <RelativeLayout
            android:id="@+id/title_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/album_art"
            android:background="#31576b"
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_album_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/album_title"
                android:layout_below="@id/album_title"
                android:text="@string/desc_album_artist"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#fff"/>
        </RelativeLayout>

        <ImageButton

            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/title_panel"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="-30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/green_circle"
            android:contentDescription="@string/desc_fab"

            android:src="@drawable/ic_pause_24dp"
            android:transitionName="fab"/>

        <LinearLayout
            android:id="@+id/track_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title_panel"
            android:background="#eeeeee"
            android:gravity="center_vertical"
            android:minHeight="80dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_volume_up_24dp"/>

            <TextView
                android:id="@+id/track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:text="@string/track_title"
                android:textAppearance="?android:attr/textAppearanceInverse"
                android:textColor="#333"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/track_time"
                android:textAppearance="?android:attr/textAppearanceInverse"
                android:textColor="#333"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
